# sela

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  Makefile.win  README.md  TODO.txt  ao_output.c  ao_output.h  apev2.c  build.sh  decode.c  encode.c  format.h  lpc.c  lpc.dev  lpc.h  lpc_matlab.m  lpctest.c  main.c  packetqueue.c  packetqueue.h  portaudio_output.c  pulse_output.c  pulse_output.h  rice.c  rice.h  ricetest.c  selaplay.c  sonar-project.properties  test.xml  wavdiff.c  wavutils.c  wavutils.h  wavwriter.c  wavwriter.h
arduino/: arduino_encoder.ino  rice.ino
core/: apev2.c  decode.c  encode.c  id3v1_1.c  lpc.c  wavutils.c
include/: ao_output.h  apev2.h  format.h  id3v1_1.h  lpc.h  packetqueue.h  portaudio_output.h  pulse_output.h  rice.h  wavutils.h
matlab-tests/: calc_original.m  calc_residue.m  dqtz_par.m  test_lpc.m
player/: ao_output.c  packetqueue.c  pulse_output.c  selaplay.c
src/: main.cpp
src/data/: rice_decoded_data.cpp  rice_encoded_data.cpp
src/file/: sela_file.cpp  wav_file.cpp
src/frame/: frame_decoder.cpp  frame_encoder.cpp
src/include/: frame.hpp  lpc.hpp  rice.hpp
src/include/data/: audio_packet.hpp  exception.hpp  lpc_decoded_data.hpp  lpc_encoded_data.hpp  rice_decoded_data.hpp  rice_encoded_data.hpp  sela_file.hpp  sela_frame.hpp  sela_header.hpp  sela_sub_frame.hpp  wav_chunk.hpp  wav_file.hpp  wav_frame.hpp  wav_sub_chunk.hpp  wav_subchunk.hpp
src/include/file/: sela_file.hpp  wav_file.hpp
src/include/sela/: decoder.hpp  encoder.hpp  player.hpp
src/lpc/: linear_predictor.cpp  residue_generator.cpp  sample_generator.cpp
src/rice/: rice.hpp  rice_decoder.cpp  rice_encoder.cpp
src/sela/: decoder.cpp  encoder.cpp  player.cpp
test/: frametests.cpp  lpctests.cpp  main.cpp  ricetests.cpp
tests/: apev2test.c  lpctest.c  ricetest.c
tests/matlab-tests/: autocorl.m  calc_original.m  qtz_par.m  scale_par.m  test_lpc.m
utils/: wavdiff.c
